--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.2",
 		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.45.0",
 		"@tanstack/react-query": "^4.36.1",
 		"@tanstack/react-query-devtools": "^4.36.1",
 		"@vercel/analytics": "^1.4.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"eslint-config-react-app": "^7.0.1",
 		"lucide-react": "^0.439.0",
 		"react": "^18.2.0",
-		"react-day-picker": "^9.0.9",
+		"react-datepicker": "^7.6.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.2",
 		"react-hot-toast": "^2.4.1",
@@ -27,11 +31,14 @@
 		"react-router-dom": "^6.25.1",
 		"recharts": "^2.12.7",
 		"styled-components": "^6.1.12",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
 		"vite-plugin-eslint": "^1.8.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
+		"@types/node": "^22.13.4",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react": "^4.0.3",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^8.57.0",
@@ -40,6 +47,7 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.3",
 		"vite": "^4.4.5"
 	}
 }
